--- a/styles.css
+++ b/styles.css
@@ -788,6 +788,35 @@ body {
 
 /*ESTILO DE NOSOTROS - PAGINA DE NOSOTROS */
 
+/*ESTILO PARA MOVILES */
+
+@media (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .navbar nav a,
+  .navbar nav .btn {
+    margin: 0.5rem 0;
+    padding: 0.6rem 1rem;
+    width: 100%;
+    text-align: left;
+  }
+
+  .carrito-icono-container {
+    align-self: flex-end;
+    margin-bottom: 1rem;
+  }
+}
 
 
 
